// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text/Paragraph FEATURED type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #3498db;
  text-align: left;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#3498db"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph MEDIUM size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 1.5;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={16}
    type="#2f313a"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph NEGATIVE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #dd3311;
  text-align: left;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#dd3311"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph NEUTRAL type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph POSITIVE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2ecc71;
  text-align: left;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#2ecc71"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph SMALL size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 1.71;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={14}
    type="#2f313a"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph SUBTLE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="rgba(0, 0, 0, 0.32)"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph WHITE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  line-height: 1.33;
}

<div
  style={
    Object {
      "background": "cadetblue",
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="white"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph centered 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#2f313a"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph default - LARGE size, NORMAL type, left aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#2f313a"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph extended style 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 1.33;
  font-family: cursive;
}

.c0::first-letter {
  font-size: 3em;
  color: gainsboro;
  text-shadow: 0 0 6px black;
  line-height: 1;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="Text-pfq5dp-0 c0"
    size={18}
    type="#2f313a"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots Text/Paragraph right aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: right;
  line-height: 1.33;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#2f313a"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;
